theme_kommit - correct the header z-index to correct covered menus
Related to-do: KSL: Wrong Z-index for the custom menu in the course categories
https://3.basecamp.com/3304540/buckets/676070/todos/255180202

--- a/theme/kommit/style/theme.css
+++ b/theme/kommit/style/theme.css
@@ -278,7 +278,6 @@ h6 {
 .navbar-fixed-top,
 .navbar-fixed-bottom {
   position: relative;
-  z-index: 0;
 }
 /* @group Navbar */
 .navbar .nav > li > a:hover,
